--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ categories = ["data-structures", "algorithms", "science::geo"]
 bytemuck = "1"
 float_next_after = "1"
 geo-traits = "0.3"
+geo-types = "0.7.16"
 num-traits = "0.2"
 rayon = { version = "1.8.0", optional = true }
 thiserror = "1"
 tinyvec = { version = "1", features = ["alloc", "rustc_1_40"] }
+wkt = "0.14.0"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
@@ -27,7 +29,13 @@ geo = "0.30.0"
 geozero = "0.12"
 rstar = "0.12"
 zip = "2.2.2"
+once_cell = "1.21.3"
+rand = "0.8"
 
 [[bench]]
 name = "rtree"
+harness = false
+
+[[bench]]
+name = "real_world_case"
 harness = false
