--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rayon = { version = "1.8.0", optional = true }
 thiserror = "1"
 tinyvec = { version = "1", features = ["alloc", "rustc_1_40"] }
 wkt = "0.14.0"
+wkb = "0.7"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
