--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,10 @@ num-traits = "0.2"
 rayon = { version = "1.8.0", optional = true }
 thiserror = "1"
 tinyvec = { version = "1", features = ["alloc", "rustc_1_40"] }
-wkt = "0.14.0"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
-geozero = "0.12"
+geozero = { version = "0.12", features = ["with-wkb", "with-geo"] }
 rstar = "0.12"
 zip = "2.2.2"
 once_cell = "1.21.3"
